Add final pic and manual touchups

--- a/docs/latex/UserManual.tex
+++ b/docs/latex/UserManual.tex
@@ -159,6 +159,20 @@ Blix is compatible with the following operating systems:
 \addcontentsline{toc}{section}{Usage}
 \section*{Usage}
 
+\textbf{Useful bindings}
+\begin{itemize}
+  \item[\textbullet] Command palette : \textbf{Ctrl + P}
+  \item[\textbullet] Delete Node : \textbf{Ctrl + del}
+  \item[\textbullet] Add Node : \textbf{Ctrl + A}
+\end{itemize}
+
+\begin{figure}[H]
+  \centering
+  {\includegraphics[width=0.5\textwidth]{../pics/palette.png}}
+  \caption{Command Palette}
+\end{figure}
+
+
 \addcontentsline{toc}{subsection}{Projects}
 \subsection*{Projects}
 
