Updated code standards document

--- a/docs/latex/code_standards.tex
+++ b/docs/latex/code_standards.tex
@@ -139,6 +139,8 @@ Join us on this coding journey as we pave the way for a new era in photo editing
 .2 assets.
 .2 blix-plugins.
 .3 hello-plugin.
+.3 math-plugin.
+.3 base-plugin.
 .3 input-plugin.
 .2 src.
 .3 electron.
@@ -154,6 +156,7 @@ Join us on this coding journey as we pave the way for a new era in photo editing
 .3 frontend.
 .4 api.
 .4 components.
+.4 palette.
 .5 graph.
 .5 projects.
 .4 layout.
@@ -164,11 +167,14 @@ Join us on this coding journey as we pave the way for a new era in photo editing
 .4 types.
 .4 utils.
 .2 tests.
+.3 integration-tests.
+.4 plugins.
 .3 unit\_tests.
 .4 electron.
-.4 frontend.
-.5 components.
-.3 integration\_tests.
+.5 lib.
+.6 components.
+.6 core-graph.
+.6 plugins.
 .3 end-to-end\_tests.
 }
  
