Add plugin management functional requirements

--- a/docs/latex/SRSv2.tex
+++ b/docs/latex/SRSv2.tex
@@ -118,11 +118,6 @@ using a node-based system, which describes the image processing pipeline. This
 offers creative control to professionals, while still being intuitive for 
 novice users.
 
-Domain Pulse is the ultimate sentiment analysis platform. It gathers and analyses
-online opinions about any domain, be it a business, a person, or more. With stunning
-visuals and easy-to-understand statistics, Domain Pulse helps you understand the
-online presence and sentiment for any domain
-
 The system provides functionality for basic photo editing operations, like white
 balance and saturation. It also has advanced operations, such as image
 segmentation, which allows users to edit selected objects individually and
@@ -328,6 +323,14 @@ to have} requirements.
         \item System should contain a collision detection algorithm to
         place the nodes on the graph
         \item Cycle detection algorithm to indicate invalid connections
+    \end{enumerate}
+
+    \item Plugin Management
+    \begin{enumerate}[label*=\arabic*.]
+        \item Users should be able to create their own plugins
+        \item Users should be able to load plugins of their choice
+        \item Users should be able to load plugins in real time
+        \item Plugin functionality should be available in real time once the plugin is loaded
     \end{enumerate}
     
     \item Natural Language Processing to Graph \textbf{*}
