--- a/docs/latex/SRSv2.tex
+++ b/docs/latex/SRSv2.tex
@@ -240,24 +240,21 @@ campaigns and advertisements.
 \subsubsection*{Project Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
-    {\includegraphics[width=0.55\textwidth]{../diagramPng/Project-subsystem.png}}
+    \includegraphics[width=0.55\textwidth]{../diagramPng/Project-subsystem.png}
 \end{figure}
 
 \addcontentsline{toc}{subsection}{Layout Subsystem}
 \subsubsection*{Layout Subsystem}
 \begin{figure}[htbp]
     \centering
-      \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
-      {\includegraphics[width=0.8\textwidth]{../diagramPng/Layout-Subsystem.png}}
+      \includegraphics[width=0.8\textwidth]{../diagramPng/Layout-Subsystem.png}
 \end{figure}
 
 \addcontentsline{toc}{subsection}{Graph Management Subsystem}
 \subsubsection*{Graph Management Subsystem}
 \begin{figure}[htbp]
   \centering
-  \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
-  {\includegraphics[width=0.8\textwidth]{../diagramPng/Graph-Subsystem.png}}
+  \includegraphics[width=0.8\textwidth]{../diagramPng/Graph-Subsystem.png}
 \end{figure}
 
 
@@ -265,8 +262,7 @@ campaigns and advertisements.
 \subsubsection*{NLP Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
-    {\includegraphics[width=0.61\textwidth]{../diagramPng/Graph Parsing-Subsystem.png}}
+    \includegraphics[width=0.61\textwidth]{../diagramPng/Graph Parsing-Subsystem.png}
 \end{figure}
 
 \pagebreak
@@ -274,8 +270,7 @@ campaigns and advertisements.
 \subsubsection*{User Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
-    {\includegraphics[width=0.95\textwidth]{../diagramPng/User-Subsystem.png}}
+    \includegraphics[width=0.95\textwidth]{../diagramPng/User-Subsystem.png}
 \end{figure}
 
 \pagebreak
@@ -367,6 +362,7 @@ to have} requirements.
     \item Project Management
     \item Layout
     \item Graph Management
+    \item Plugin Management
     \item Natural Language Processing to Graph
     \item Photo Processing \& Graph Interpreter
     \item User Administration
@@ -380,38 +376,33 @@ to have} requirements.
 \subsubsection*{Project Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
-    {\includegraphics[width=1\textwidth]{../diagramPng/Usecase Project-Subsystem.png}}
+    \includegraphics[width=1\textwidth]{../diagramPng/Usecase Project-Subsystem.png}
 \end{figure}
 
 \pagebreak
 \subsubsection*{Layout Subsystem}
 \begin{figure}[htbp]
     \centering
-     \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
-     {\includegraphics[width=1\textwidth]{../diagramPng/Usecase Layout-Subsystem.png}}
+     \includegraphics[width=1\textwidth]{../diagramPng/Usecase Layout-Subsystem.png}
 \end{figure}
 
 \subsubsection*{Graph Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
-    {\includegraphics[width=0.6\textwidth]{../diagramPng/Usecase Graph-Subsystem.png}}
+    \includegraphics[width=0.6\textwidth]{../diagramPng/Usecase Graph-Subsystem.png}
 \end{figure}
 
 \pagebreak
 \subsubsection*{Image Processing Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
-    {\includegraphics[width=0.6\textwidth]{../diagramPng/UseCase Image-Subsystem.png}}
+    \includegraphics[width=0.6\textwidth]{../diagramPng/UseCase Image-Subsystem.png}
 \end{figure}
 
 \subsubsection*{User Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
-    {\includegraphics[width=0.6\textwidth]{../diagramPng/Usecase User-Subsystem.png}}
+    \includegraphics[width=0.6\textwidth]{../diagramPng/Usecase User-Subsystem.png}
 \end{figure}
 
 
