Extend technology choices with langchain

--- a/docs/latex/Architecture.tex
+++ b/docs/latex/Architecture.tex
@@ -417,4 +417,28 @@ application.
 	\item[\textbullet] Scalability and latency considerations is an external
 	service.
 \end{enumerate}
+
+
+\subsection{LangChain}
+
+Langchain is a new framework built around llm that allows developers to build
+applications that capitalize on the knowledge base and computational power of 
+llm's such as gpt-3 by provided the llm's with specialized knowledge on the 
+applications domain. Langchain is usefull for Blix as it allows for the manipulation
+of the graph and photos using natural language and llms. 
+
+\textbf{Pros:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] Local storage of context and knowledge base.
+	\item[\textbullet] Chaining of llm's to exploit different llm's strengths.
+	\item[\textbullet] Allows for the creation of a highly scalable application.
+	\item[\textbullet] Flexibility as Langchain is an open source platform.
+\end{enumerate}
+
+\textbf{Cons:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] Lack of solid documentation as Langchain is a new framework.
+	\item[\textbullet] Generally requires more requests to llm's to achieve the desired result.
+	\item[\textbullet] Lack of integrations for a typescript environment.
+\end{enumerate}
 \end{document}
