Add typescript and nodejs

--- a/docs/latex/Architecture.tex
+++ b/docs/latex/Architecture.tex
@@ -464,4 +464,43 @@ to llm's.
 	\item[\textbullet] High complexity indexing.
 \end{enumerate}
 
+\subsection{typescript}
+
+typescript is a superset of javascript that adds static typing to javascript. typescript
+is used in Blix to provide a more robust codebase and to minimize the number of runtime errors
+that can occur. typescript is a versatile language that allows for the creation of a 
+stable application.
+
+\textbf{Pros:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] Any valid javascript code is valid typescript code.
+	\item[\textbullet] Type system allows for the minimization of runtime errors.
+	\item[\textbullet] Better maintainability and documentation of code as typescript is a strongly typed language.
+\end{enumerate}
+
+\textbf{Cons:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] Additional developement overhead
+	\item[\textbullet] More limited ecosystem
+\end{enumerate}
+
+\subsection{Nodejs}
+
+Nodejs is an open source, cross-platform, back-end javascript runtime environment that
+executes javascript code outside of a web browser. Nodejs is used in Blix to provide a
+stable and high performance back-end for our application.
+
+\textbf{Pros:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] Everything can be done in typescript
+	\item[\textbullet] Vast ecosystem of libraries and frameworks
+	\item[\textbullet] High performance and low latency
+\end{enumerate}
+
+\textbf{Cons:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] Single threaded event loop
+	\item[\textbullet] Relatively high memory usage
+\end{enumerate}
+
 \end{document}
