Add GPT to technology choices.

--- a/docs/latex/Architecture.tex
+++ b/docs/latex/Architecture.tex
@@ -503,4 +503,27 @@ stable and high performance back-end for our application.
 	\item[\textbullet] Relatively high memory usage
 \end{enumerate}
 
+\subsection{AI Models}
+
+Blix supports multiple language models, each with their own strengths and weaknesses.
+The language models are used in Blix to provide a more natural and human like experience
+while also allowing the user to fine tune their experience to their liking.
+
+Below is a list of the language models that Blix supports:
+
+\subsection{GPT-3.5 Turbo}
+
+\textbf{Pros:}
+\begin{enumerate}[label*=\arabic*.]
+    \item [\textbullet] Great performance and reasoning
+	\item [\textbullet] versatile and flexible
+	\item[\textbullet] Well known and documented
+\end{enumerate}
+
+\textbf{Cons:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] Expensive	
+	\item[\textbullet] Limited to textual input and output
+\end{enumerate}
+
 \end{document}
