--- a/docs/latex/Architecture.tex
+++ b/docs/latex/Architecture.tex
@@ -503,6 +503,27 @@ stable and high performance back-end for our application.
 	\item[\textbullet] Relatively high memory usage
 \end{enumerate}
 
+\subsection{Python}
+
+Python is an interpreted language that provides a large standard library and a vast ecosystem
+of libraries and frameworks. Python is used in Blix to provide a stable and high performance
+environment for our AI assistant such that langchain can be used to its full potential.
+
+\textbf{Pros:}
+\begin{enumerate}[label*=\arabic*.]
+    \item [\textbullet] Large standard library
+	\item [\textbullet] versatile and flexible
+	\item[\textbullet] Great integration with Langchain
+\end{enumerate}
+
+\textbf{Cons:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] Expensive	
+	\item[\textbullet] Volatile type checking
+	\item[\textbullet] Performance
+	\item[\textbullet] Dependency management is complicated for blix
+\end{enumerate}
+
 \subsection{AI Models}
 
 Blix supports multiple language models, each with their own strengths and weaknesses.
