Extend ai manual

--- a/docs/latex/UserManual.tex
+++ b/docs/latex/UserManual.tex
@@ -315,4 +315,14 @@ Blix allows users to communicate with an LLM that is fine-tuned to our system. T
   \item[\textbullet] The AI will then return a response to the user, which will be displayed through the information panel in the bottom right corner of the screen.
 \end{itemize}
 
+
+\textbf{General prompt guidelines}
+
+\begin{itemize}
+  \item[\textbullet] Try to be as specific as possible when sending a prompt to the AI.
+  \item[\textbullet] Shorter/smaller tasks are more likely to be performed correctly.
+  \item[\textbullet] Look at the AI's response in the information panel.
+\end{itemize}
+ 
+
 \end{document}
