Add ai subsystem diagram

--- a/docs/latex/SRSv3.tex
+++ b/docs/latex/SRSv3.tex
@@ -240,9 +240,19 @@ campaigns and advertisements.
 \subsubsection*{Node Builder Subsystem}
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.55\textwidth]{../diagramPng/Builder-subsystem.png}
+    \includegraphics[width=1.0\textwidth]{../diagramPng/Builder-subsystem.png}
 \end{figure}
 
+\clearpage
+
+\addcontentsline{toc}{subsection}{AI Subsystem}
+\subsubsection*{AI Subsystem}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=1.1\textwidth]{../diagramPng/AI-subsystem.png}
+\end{figure}
+
+\clearpage
 
 \addcontentsline{toc}{subsection}{Project Management Subsystem}
 \subsubsection*{Project Management Subsystem}
