--- a/docs/latex/SRSv3.tex
+++ b/docs/latex/SRSv3.tex
@@ -268,6 +268,7 @@ campaigns and advertisements.
       \includegraphics[width=0.8\textwidth]{../diagramPng/Layout-Subsystem.png}
 \end{figure}
 
+\pagebreak
 \addcontentsline{toc}{subsection}{Graph Management Subsystem}
 \subsubsection*{Graph Management Subsystem}
 \begin{figure}[htbp]
@@ -275,6 +276,7 @@ campaigns and advertisements.
   \includegraphics[width=0.8\textwidth]{../diagramPng/Graph-Subsystem.png}
 \end{figure}
 
+\pagebreak
 
 \addcontentsline{toc}{subsection}{NLP Subsystem}
 \subsubsection*{NLP Subsystem}
