--- a/docs/latex/UserManual.tex
+++ b/docs/latex/UserManual.tex
@@ -87,7 +87,7 @@ tabsize=2,
 \begin{titlepage}
 	\centering
     % \includegraphics[width=0.5\textwidth]{your_logo.png}\par\vspace{1cm}
-    {\scshape\LARGE User Manual Specification V1\par}
+    {\scshape\LARGE User Manual Specification V2\par}
     \vspace{1.5cm}
     {\huge\bfseries Blix - AI Photo Editor\par}
     \vspace{2.5cm}
@@ -119,7 +119,7 @@ intuitive interface, reminiscent of a digital blender. This user manual will gui
 this cutting-edge editing tool.
 
 Blix caters to users of all levels, from amateur photographers to seasoned professionals, by streamlining the editing process and eliminating the need 
-for extensive knowledge of complex editing software. By presenting a visual graph-based interface, akin to a blender, Blix enables effortless mixing and matching of diverse editing effects.
+for extensive knowledge of complex editing software. By presenting a visual graph-based interface, akin to Blender, Blix enables effortless mixing and matching of diverse editing effects.
 
 As a user, you gain access to a vast array of editing possibilities. Whether you wish to apply filters, fine-tune brightness and contrast, or add artistic effects such as vignettes or vintage tones, Blix provides an extensive selection of editing options. Each editing choice is represented as a node within the graph, allowing for seamless connectivity and the creation of custom editing flows tailored to your preferences.
 
@@ -164,12 +164,18 @@ Blix is compatible with the following operating systems:
   \item[\textbullet] Command palette : \textbf{Ctrl + P}
   \item[\textbullet] Delete Node : \textbf{Ctrl + del}
   \item[\textbullet] Add Node : \textbf{Ctrl + A}
+  \item[\textbullet] New Project : \textbf{Ctrl + N}
+  \item[\textbullet] Settings : \textbf{Ctrl + comma}
+
 \end{itemize}
+
+At the heart of Blix is the goal to create an extremely extensible and customizable system ,thus for your convenience, Blix provides you with custom keybindings to streamline your editing experience and enchane your productivity.
+These keybinding are provided in a dedicated tile which holds all the keybindings. To change a keybinding, simply select its key in the tile and press the new key you wish to bind it to.
 
 \begin{figure}[H]
   \centering
-  {\includegraphics[width=0.5\textwidth]{../pics/palette.png}}
-  \caption{Command Palette}
+  {\includegraphics[width=1.0\textwidth]{../pics/tutorial-keybindings.png}}
+  \caption{Keybindings tile}
 \end{figure}
 
 
