Add Jest as tech choice

--- a/docs/latex/Architecture.tex
+++ b/docs/latex/Architecture.tex
@@ -524,6 +524,30 @@ environment for our AI assistant such that langchain can be used to its full pot
 	\item[\textbullet] Dependency management is complicated for blix
 \end{enumerate}
 
+\subsection{Jest}
+
+Jest is a javascript testing framework that is used in Blix to provide a stable and
+reliable codebase. Jest is used to test the functionality of our application and to
+ensure that our application is working as intended. We picked jest as our testing
+framework as it is the most popular testing framework for javascript and it is
+recommended by the creators of typescript.
+
+Here are more of the considerations that we took into account when choosing a testing
+framework:
+
+\textbf{Pros:}
+\begin{enumerate}[label*=\arabic*.]
+    \item [\textbullet] Fast and efficient
+	\item [\textbullet] Great documentation
+	\item [\textbullet] Built-in code coverage
+\end{enumerate}
+
+\textbf{Cons:}
+\begin{enumerate}[label*=\arabic*.]
+	\item[\textbullet] Size and Complexity	
+	\item[\textbullet] Configuration Overhead
+\end{enumerate}
+
 \subsection{AI Models}
 
 Blix supports multiple language models, each with their own strengths and weaknesses.
